# sohaibdevv

./: README.md
AgentSphere-X/: CONTRIBUTING.md  README.md  pyproject.toml
AgentSphere-X/.github/workflows/: ci.yml  release.yml
AgentSphere-X/agents/python/crewai/: enterprise_ops_crew.py
AgentSphere-X/agents/python/langgraph/: cyclic_validator.py
AgentSphere-X/agents/python/microsoft_agent_framework/: blueprint.py
AgentSphere-X/agents/python/pydanticai/: typed_workflow.py
AgentSphere-X/agents/python/smolagents/: code_first_loop.py
AgentSphere-X/agents/typescript/mastra/bridge-agent/: agent.ts
AgentSphere-X/apps/web/: package.json
AgentSphere-X/apps/web/app/: page.tsx
AgentSphere-X/apps/web/app/api/chat/: route.ts
AgentSphere-X/docs/: IDE_INTEGRATION.md
AgentSphere-X/evals/: benchmark.matrix.yaml
AgentSphere-X/evals/scenarios/: crew-enterprise-regression.yaml  langgraph-determinism.yaml
AgentSphere-X/mcp-servers/dev-api/: server.ts
AgentSphere-X/mcp-servers/local-fs/: server.ts
AgentSphere-X/scripts/: run_evals.py  smoke_test.py
