[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsphere-x"
version = "0.1.0"
description = "Production-grade multi-agent architecture reference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10.0",
  "pydantic-ai>=0.0.16",
  "langgraph>=0.2.0",
]

[tool.setuptools]
include-package-data = true

